@@ -265,15 +265,38 @@ memset(VAR,0,SIZE * sizeof(TYPE));
 
 
 /* These are the types of files we can encounter while hashing */
-#define file_regular    0
-#define file_directory  1
-#define file_door       2
-#define file_block      3
-#define file_character  4
-#define file_pipe       5
-#define file_socket     6
-#define file_symlink    7
-#define file_unknown  254
+
+#define stat_regular    0
+#define stat_directory  1
+#define stat_door       2
+#define stat_block      3
+#define stat_character  4
+#define stat_pipe       5
+#define stat_socket     6
+#define stat_symlink    7
+#define stat_unknown  254
+
+/* Types of files that contain known hashes */
+typedef enum 
+  {
+    file_plain,
+    file_bsd,
+    file_hashkeeper,
+    file_nsrl_15,
+    file_nsrl_20,
+    file_encase3,
+    file_encase4,
+    file_ilook,
+
+    /* Files generated by md5deep with the ten digit filesize at the start 
+       of each line */
+    file_md5deep_size,
+
+    file_hashdeep_10,
+
+    file_unknown
+    
+  } filetype_t; 
 
 
 
@@ -290,7 +313,7 @@ int done_processing_dir(TCHAR *fn);
 /* ------------------------------------------------------------------
    HELPER FUNCTIONS
    ------------------------------------------------------------------ */
-
+void chop_line(char *s);
 
 
 void shift_string(char *fn, size_t start, size_t new_start);
